# benchmark-wasmtime

./: AGENTS.md  CODEBUDDY.md  Cargo.toml  README.md  test_instance.rs
.codebuddy/plan/benchmark-automation/: requirements.md  task-item.md
.codebuddy/plan/cli/: requirements.md  task-item.md
.codebuddy/plan/wasmtime-benchmark-structure/: requirements.md  task-item.md
.github/workflows/: benchmark.yml
crates/benchmarks/: .gitignore  Cargo.toml  README.md  collect_report.py
crates/benchmarks/benches/: benchmark.rs  call_async.rs  instantiate.rs  instantiate_async.rs
crates/benchmarks/src/: lib.rs
crates/benchmarks/tests/: integration_test.rs
crates/cli/: Cargo.toml  Makefile  README.md
crates/cli/examples/: simple.wat
crates/cli/src/: main.rs  tests.rs
crates/cli/tests/: integration_test.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  tests.rs  v21.rs  v41.rs
crates/golden/: Makefile
crates/golden/.cargo/: config.toml
crates/golden/argon2/: Cargo.toml
crates/golden/argon2/src/: lib.rs  wasm.rs
crates/golden/argon2/wit/: world.wit
crates/golden/pulldown-cmark/: Cargo.toml
crates/golden/pulldown-cmark/src/: lib.rs  wasm.rs
crates/golden/pulldown-cmark/wit/: world.wit
crates/golden/rust-python/: Cargo.toml
crates/golden/rust-python/src/: lib.rs  wasm.rs
crates/golden/rust-python/wit/: world.wit
crates/golden/sevenz-7z/: Cargo.toml
crates/golden/sevenz-7z/src/: lib.rs  tests.rs  wasm.rs
crates/golden/sevenz-7z/wit/: world.wit
crates/testdata/: Cargo.toml
crates/testdata/src/: lib.rs  tests.rs  wasmi.rs
crates/testdata/src/fixtures/: complex.wasm  complex.wat  simple.wasm  simple.wat
crates/wasmtime/v21/: Cargo.toml
crates/wasmtime/v21/src/: lib.rs  tests.rs
crates/wasmtime/v41/: Cargo.toml
crates/wasmtime/v41/src/: lib.rs  tests.rs
