[workspace]
members = [
    "crates/engine",
    "crates/testdata",
    "crates/benchmarks",
    "crates/third-party/wasmi-testdata",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
criterion = "0.8"

[profile.bench]
# debug = true
lto = "fat"
codegen-units = 1
