[workspace]
members = [
    "crates/engine",
    "crates/testdata",
    "crates/benchmarks",
    "crates/third-party/wasmi-testdata",
    "crates/golden/*",
    "crates/cli",
]
exclude = [
    "crates/golden/.cargo",
    "crates/golden/out",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
criterion = "0.8"
wasmtime-v21 = { version = "21.0", package = "wasmtime" }
wasmtime-v41 = { version = "41.0", package = "wasmtime" }
wasmtime-wasi-v21 = { version = "21.0", package = "wasmtime-wasi" }
wasmtime-wasi-v41 = { version = "41.0", package = "wasmtime-wasi" }
wit-bindgen = "0.50.0"

[profile.bench]
#debug = true
lto = "fat"
codegen-units = 1
