[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true

[[bench]]
name = "benchmark"
harness = false

[dependencies]
engine = { path = "../engine" }
testdata = { path = "../testdata" }
wasmtime-v21 = { path = "../wasmtime/v21" }
wasmtime-v41 = { path = "../wasmtime/v41" }
anyhow = "1.0"

[dev-dependencies]
criterion = { workspace = true }