[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "instantiate"
harness = false

[dependencies]
engine = { path = "../engine" }
testdata = { path = "../testdata" }
anyhow = "1.0"

[dev-dependencies]
criterion = { workspace = true }