[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "instantiate"
harness = false

[[bench]]
name = "instantiate_async"
harness = false

[dependencies]
engine = { path = "../engine" }
testdata = { path = "../testdata" }
anyhow = "1.0"

[dev-dependencies]
criterion = { workspace = true, features = ["async_futures"] }

#[target.x86_64-unknown-linux-gnu]
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
