[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "wasmtime-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

wasmtime-wasi-v41.workspace = true

[dependencies.serde_json]
features = ["preserve_order"]
workspace = true

[dependencies.wasmtime-v41]
features = ["component-model"]
workspace = true

[dev-dependencies]
tempfile = "3.8"
