[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
wasmtime-v21 = { version = "21.0", package = "wasmtime" }
wasmtime-v41 = { version = "41.0", package = "wasmtime" }
wasmtime-wasi-v21 = { version = "21.0", package = "wasmtime-wasi" }
wasmtime-wasi-v41 = { version = "41.0", package = "wasmtime-wasi" }