[package]
name = "argon2-component"
version.workspace = true
edition.workspace = true

[dependencies]
argon2 = { version = "0.5.3", default-features = false, features = ["alloc"] }
anyhow.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[lib]
crate-type = ["cdylib"]
bench = false
